--- a/src/components/Character/Character.module.css
+++ b/src/components/Character/Character.module.css
@@ -1,4 +1,8 @@
 .character {
   /* Fill the available container height */
-  height: 100%;
+  /* height: 100%; */
+  position: absolute;
+  left: 60%;
+  top: -200%;
+  width: 35%;
 }
